--- a/SkycaijiApp/admin/view/setting/site.html
+++ b/SkycaijiApp/admin/view/setting/site.html
@@ -54,6 +54,7 @@
 		        	<label class="radio-inline"><input type="radio" name="closelog" value="1">{$Think.lang.yes}</label>
 		        	<label class="radio-inline"><input type="radio" name="closelog" value="0">{$Think.lang.no}</label>
 		        </div>
+		        <p class="help-block">日志文件会占用磁盘空间，非运维人员建议关闭</p>
 		    </div>
 		   	<div class="form-group">
 				<button type="submit" class="btn btn-primary">{$Think.lang.save}</button>
