--- a/SkycaijiApp/admin/view/collector/list_task.html
+++ b/SkycaijiApp/admin/view/collector/list_task.html
@@ -31,5 +31,5 @@
 	</script>
 </div>
 {else /}
-	没有规则，请进入<a href="{:url('Store/index')}">云平台</a>下载
+	没有规则，请进入<a href="{:url('Mystore/store')}">云平台</a>下载
 {/if}
