--- a/SkycaijiApp/admin/view/mystore/rules_task.html
+++ b/SkycaijiApp/admin/view/mystore/rules_task.html
@@ -20,5 +20,5 @@
 	</script>
 </div>
 {else /}
-	您没有规则，请进入<a href="{:url('Store/index')}">云平台</a>下载
+	您没有规则，请进入<a href="{:url('Mystore/store')}">云平台</a>下载
 {/if}
