--- a/SkycaijiApp/admin/view/task/list_list.html
+++ b/SkycaijiApp/admin/view/task/list_list.html
@@ -27,7 +27,7 @@
 			{if empty($taskList)}
 				<tr>
 					<td colspan="8" style="text-align:center;">
-						<p class="help-block">没有任务，创建<a href="{:url('Task/add')}">新任务</a>或进入<a href="{:url('Store/index')}">云平台</a>下载规则</p>
+						<p class="help-block">没有任务，创建<a href="{:url('Task/add')}">新任务</a>或进入<a href="{:url('Mystore/store')}">云平台</a>下载规则</p>
 					</td>
 				</tr>
 			{else/}
